# agent_news

./: .gitignore  AGENT.md  LICENSE  PLAN.md  README.md  doctor.bat  install.bat  pyproject.toml  start.bat  stop.bat
agent_news/: __init__.py  __main__.py  cli.py  config.py  main.py
agent_news/browser/: __init__.py  dom.py  manager.py  selectors.py
agent_news/content/: __init__.py  article_quality.py  publish_performance.py  wechat_author.py  wechat_format.py  wechat_payload.py
agent_news/db/: __init__.py  engine.py  intel_repository.py  repository.py
agent_news/intel/: __init__.py  cluster.py  connectors.py  deep_dive.py  defaults.py  normalize.py  review.py  score.py  source_discovery.py  source_probe.py  tokenizer.py  writing_guide.py
agent_news/models/: __init__.py  article.py  intel.py  operation.py  publish.py  workflow.py
agent_news/operations/: __init__.py  articles.py  audit.py  base.py  radar.py  registry.py  workflow.py
docs/: ATOMIC_OPERATIONS.md  CONTENT_PERFORMANCE_INSIGHTS.md  RADAR_DESIGN.md  TECHNICAL_ARCHITECTURE.md
scripts/: doctor.ps1  start_backend.ps1  stop_backend.ps1
tests/: conftest.py  test_article_quality_gate.py  test_atomic_orchestration.py  test_audit.py  test_browser_manager_pages.py  test_browser_tabs.py  test_e2e_smoke.py  test_intel_pipeline.py  test_legacy_sources.py  test_new_atomic_operations.py  test_phase1_skeleton.py  test_publish_settings.py  test_radar_operations.py  test_v01_closure.py  test_wechat_format.py  test_wechat_operations.py  test_wechat_setting_calibration.py  test_writing_guide.py
(+16 files in other folders)
