[project]
name = "agent-news"
version = "0.1.0"
description = "Fully agent-controlled news publishing architecture. Every WeChat publish step is an AI-selectable atomic operation."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.8,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "playwright>=1.52,<2.0",
    "openai>=1.0.0",
    "httpx>=0.27,<1.0",
    "python-multipart>=0.0.9,<1.0",
    "pyyaml>=6.0,<7.0",
    "feedparser>=6.0,<7.0",
    "readability-lxml>=0.8,<1.0",
    "trafilatura>=1.12,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
]

[tool.ruff]
line-length = 140
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["data", "logs", ".ruff_cache"]
